<resources>
    <string name="app_nameOne">倾心营养师</string>
    <!--美食模块*********************************-->
    <string name="h_lab_title2">-烹饪技巧-</string>
    <string name="h_candy_title">冰糖酒酿水果羹</string>
    <string name="h_candy_lab_title">主食</string>
    <string name="h_candy_tv1">天气不热的话，就可以直接喝了。如果像最近这样的天气，三十几度的高温,那就放凉后，入冰箱冷藏后再吃，
那可是相当的冰凉</string>
    <string name="h_candy_tv2">冰镇一下再喝，更能刺激消化腺分泌，增进食欲，有助消化。特别是提神解乏，解渴消暑</string>
    <string name="h_fash_title">豆瓣鲫鱼</string>
    <string name="h_fash_lab_title">主食</string>
    <string name="h_fash_tv1">用厨房纸和摆干淀粉双管齐下，把鱼的表面处理的干干的</string>
    <string name="h_fash_tv2">锅要洗干净擦干，在加热的时用姜擦锅，锅里撒盐</string>
    <string name="h_fash_tv3">锅烧热后再倒冷油，等油热后在放鱼</string>
    <string name="h_fash_tv4">鱼下锅后，转小火煎，在一面完全煎好之前不要翻锅</string>
    <string name="h_fash_tv5">给鱼翻身之前，把火调最小或关掉20秒左右，待鱼稍加冷却收缩，也会减少掉皮的风险</string>
    <string name="h_harm_tv6">煎火腿奶酪蛋饼</string>
    <string name="h_harm_tv1">煎蛋饼一定要用小火，火大很容易使底部糊上了上部还是流动的蛋液，也可以开小火用锅铲轻轻的翻炒</string>
    <string name="h_harm_tv2">当蛋饼表面还有流动的蛋液是，就加入芝士丝马上卷起，如果蛋饼全熟了就卷不起来了</string>
    <string name="h_harm_tv3">这款蛋饼的口感还是比较软嫩的，如果喜欢稍熟的，可以多煎一会儿</string>
    <string name="h_milk_title">牛奶布丁</string>
    <string name="h_milk_introduce">以前只知道布丁好吃，却不知道布丁做起来也很难。这布丁，做出来十分嫩滑，又甜甜的</string>
    <string name="h_milk_tv1">布丁粉等开水后放入，要不停搅匀，不能有干粉，也不能结块哦</string>
    <string name="h_milk_tv2">水的用量也要根据布丁粉的多少来定，少一点亦可</string>
    <string name="h_milk_tv3">白糖根据个人口味添加哦</string>
    <string name="h_network_check">网络无连接</string>

    <!--咨询模块*********************************-->
    <string name="y_levelOne">一级营养师</string>
    <string name="y_levelTwo">二级营养师</string>
    <string name="y_levelThree">三级营养师</string>
    <string name="y_levelFour">四级营养师</string>
    <string name="y_children">儿童</string>
    <string name="y_old">老人</string>
    <string name="y_teenage">青年</string>
    <string name="y_baby">婴儿</string>
    <string name="y_pregnant">孕妇</string>
    <string name="y_patient">患者</string>
    <string name="y_omnipotent">全能</string>
    <string name="y_sleep">睡眠</string>
    <string name="y_weightLose">减肥</string>
    <string name="y_heighten">增高</string>
    <string name="y_intelligence">智力</string>
    <string name="y_more">更多</string>
    <string name="y_more2">更多...</string>
    <string name="y_all_first_page">全部</string>
    <string name="y_name_of_nur1">刘红军</string>
    <string name="y_excel">擅长</string>
    <string name="y_boundary">|</string>
    <string name="y_authentication">国家职业资格考试认证</string>
    <string name="y_level">等级</string>
    <string name="y_bespoke">我要定制</string>
    <string name="y_bespoke_immediately">立即订制</string>
    <string name="y_consult">我要咨询</string>
    <string name="y_evaluate">好评率</string>
    <string name="y_evaluate_rate">98.6%</string>
    <string name="y_respond">回答数</string>
    <string name="y_respond_count">18686</string>
    <string name="y_detail_brief">简介</string>
    <string name="y_detail_brief_content">北京协和医院临床营养科教授，硕士研究生导师，[1]主任医师，营养科副主任，
        出版过《临床营养治疗学》、《临床营养医师速查手册》、《做自己的营养医生》等专著。</string>
    <string name="y_detail_user_evaluate">用户评价(12866)</string>
    <string name="y_combo">|套餐选择</string>
    <string name="y_bespoke_year">按年定制:</string>
    <string name="y_bespoke_half_year">半年定制:</string>
    <string name="y_bespoke_quarter">季度定制:</string>
    <string name="y_bespoke_month">单月定制:</string>
    <string name="y_bespoke_money">¥</string>
    <string name="y_bespoke_year_money">26元/月</string>
    <string name="y_bespoke_year_time">12个月</string>
    <string name="y_bespoke_half_year_money">27元/月</string>
    <string name="y_bespoke_half_year_time">6个月</string>
    <string name="y_bespoke_quarter_money">28元/月</string>
    <string name="y_bespoke_quarter_time">3个月</string>
    <string name="y_bespoke_month_money">30元/月</string>
    <string name="y_bespoke_month_time">1个月</string>
    <string name="y_conversation1">您好！很高兴为你服务!</string>
    <string name="y_conversation2">您好！我想咨询下baby的营养搭配方案！</string>
    <string name="y_conversation3">没问题！请提供下宝宝的基本情况！</string>
    <string name="y_bespoke_demo">定制</string>
    <string name="y_detail">详细资料</string>
    <string name="y_consult_enter">长按发送语音</string>
    <string name="y_consult_send">发送</string>
    <string name="y_popups_pay">| 请选择支付方式</string>
    <string name="y_popups_cancel">取消</string>
    <string name="y_popups_pay_z">支付宝支付</string>
    <string name="y_popups_pay_z_w">关联支付宝客户端,更快捷更安全</string>
    <string name="y_popups_pay_w">微信支付</string>
    <string name="y_popups_pay_w_w">绑定微信账号,快速支付</string>
    <string name="y_popups_pay_bc">银行卡支付</string>
    <string name="y_popups_pay_bc_w">添加银行卡</string>


    <!--咨询模块******************************************End-->

    <!--登录界面S-->
    <string name="s_login">登录</string>
    <string name="s_newRegister">新用户注册</string>
    <string name="s_find">找回密码</string>
    <string name="s_register">注册</string>
    <string name="s_nonRegister">无法登录？</string>
    <string name="s_thirdRegister">三方登录</string>
    <!--登录END-->
    <!--register界面-->
    <string name="s_speed_register">快速注册</string>
    <string name="s_ordinary_register">普通注册</string>
    <string name="s_dietitian_register">营养师注册</string>
    <!--注册END-->
    <!--quick registration界面-->
    <string name="s_verification_code">获取验证码</string>
    <!--END-->
    <!--个人信息设置-->
    <string name="s_personal_nickName">昵称</string>
    <string name="s_personal_age">年龄</string>
    <string name="s_personal_button">保存设置</string>
    <string name="s_personal_showButton">显示</string>
    <!--END-->


    <string name="app_name">手机快速注册</string>
    <string name="smssdk_bind_mobile_show">手机快速注册</string>
    <string name="smssdk_contact">通讯录好友</string>
    <string name="smssdk_appkey_dialog_title">请输入您的应用信息</string>
    <string name="smssdk_appkey">AppKey</string>
    <string name="smssdk_appkey_hint">请输入您的AppKey</string>
    <string name="smssdk_appsecret">AppSecret</string>
    <string name="smssdk_appsecrethint">请输入您的AppSecret</string>


    <!--s_healthy-->
    <string name="s_healthyOne">“美国油桃”：产地是南美，并不比国产的好吃

　　许多人印象中，似乎进口水果就是贵的代名词，但事实上，如今的水果市场上，很多国产水果价格比进口的更高，最近市场上出售的“美国油桃”，其实产地是在南美，并且品质并不比国产的好。

　　“其实所谓的美国油桃主要是产自南美，国产的主要来自东北产的，东北产的现在是十五六块一斤，南美产的大概十二三块。”众彩市场的吴总介绍，后者在春节之前极其热销，但目前已经接近下市期，由于储存时间比较长了，常常出现里面发黑的情况。而东北产的油桃由于新上市，口感丝毫不输进口的，尤其是那种头部扁平顶部圆圆的，口感非常甜蜜清爽，因此价格也比较贵。

　　记者了解到，一些经销商把产地“南美”的水果说成是产自“美国”主要是想突出其“高端产地”，事实上，许多车厘子、牛油果等也是产自南美国家，诸如智利。

　　“一般手感太软的都不好，说明放的时间比较长了，果实里面容易发黑。”吴总介绍说，无论哪个产地的油桃，购买的时候要注意，越新鲜越好吃。

　　“奶油草莓、牛奶草莓、巧克力草莓：怎么没吃出奶油巧克力味呢？

　　现在在南京，几乎凡是卖草莓的都宣称自己卖的是“奶油草莓”。那么，这种草莓真像奶油一样香甜吗？“好吃是好吃，但真没吃出一点奶油味”，这是不少消费者对所谓“奶油草莓”的感觉。至于“巧克力草莓”，也没人能吃出有巧克力味。那么，这些草莓的实质到底是什么呢？"</string>
    <string name="s_healthyTwo">      　一：香芹菜

　　这种草本植物最有助于消除口中的异味，尤其是烟味。如果手边一时找不到香芹菜，香菜、薄荷也能起到去除口腔异味的作用。为了达到更好的效果，这些东西嚼的时间越长越好。

　　二：酸奶

　　每天坚持喝酸奶可降低口腔异味，喝酸奶还可以阻止口腔中有害细菌的产生，清洁口腔，但含糖的酸奶起不到这种效果。

　　三：富含纤维素的蔬菜

　　包括苹果、胡萝卜等。这些蔬菜和水果有助于分泌大量唾液。唾液不仅能湿润口腔，还能清除附着在牙齿上面或塞在牙缝中的食物残渣。这些食物残渣也是导致口腔异味的原因之一。

　　四：含大量维生素c的水果

　　浆果、柑橘、西瓜和其他含有大量维生素c的食物能使口腔形成一个不利于细菌生长的环境。经常摄入维生素c对牙床的健康也非常有用。但要注意，维生素c应该从天然食品，而非从食品添加剂中摄入，因为添加剂可能会使消化功能紊乱。

　　四大食物可使口气清新，专家表示说另外，易引起口臭的许多感染性疾病(如齿槽溢脓、龋齿、上颌窦炎、肺脓肿等)都与厌氧菌及化脓菌的联合感染有关，同时幽门螺杆菌感染也与多种易引起口臭的消化系统疾病(如慢性胃炎、十二指肠溃疡、消化不良、胃癌等)密切相关，所以及时治疗这几种细菌的感染，对消除原发病及口臭均有重要意义。</string>
    <string name="s_healthyThree">许多家庭里水果、糖果、饮料等甜品都摆得满满的。有人在吃了太多的零食后，由于摄取了较多的糖分和香料，出现了莫名其妙的恼怒、情绪激动、嘴干舌苦等症状。此时，可以适当吃一些山楂片，多饮茶水，停吃零食。

　　山楂片中含山楂酸等多种有机酸，味酸甘，并含解脂酶。入胃后，能增强酶的作用，促进肉食消化，有助于胆固醇转化。对于吃肉或油腻物后感到饱胀的人，吃些山楂、山楂片、山楂水或山楂丸等，均可消食。山楂还可利胆汁，促进胃液分泌。山楂开胃消食、化滞消积，但山楂只消不补，脾胃虚弱者不宜多食。健康的人食用山楂也应有所节制。

　　此外，还要多饮茶水，因为茶叶中的咖啡碱能增加胃腺体分泌，促进食欲，帮助消化；其次，茶叶中含有的多酚类化合物以薄膜状态附着在胃的伤口处，可抑制因胃溃疡引起的出血；还可吸收对人体有害的物质，起到“净化”作用。因此，在饭后尤其是摄入较多量的含脂肪食品后，饮茶是有益的。</string>
    <!---->

</resources>
