<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/y_img_detail_backg"
   >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <edu.neusoft.a124team.dietitian.yuJiangPeng.Y_CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/y_img_detail_head"
            app:border_width="2dp"
            app:border_color="@color/white"
            android:id="@+id/y_img_detail_head"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_name_of_nur1"
            android:textSize="22sp"
           android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/y_img_detail_head"
            android:id="@+id/y_detail_text1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_excel"
            android:layout_below="@+id/y_detail_text1"
            android:layout_alignLeft="@+id/y_detail_text1"
            android:layout_marginTop="5dp"
            android:id="@+id/y_detail_text2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_boundary"
            android:layout_below="@+id/y_detail_text2"
            android:layout_toRightOf="@+id/y_detail_text2"
            android:layout_alignBaseline="@+id/y_detail_text2"
            android:layout_marginLeft="5dp"
            android:id="@+id/y_detail_text3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_omnipotent"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/y_detail_text3"
            android:layout_alignBaseline="@+id/y_detail_text3"
            android:id="@+id/y_detail_text4"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/y_level"
            android:layout_below="@+id/y_detail_text2"
            android:layout_alignLeft="@+id/y_detail_text2"
            android:id="@+id/y_detail_text5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_boundary"
            android:layout_marginLeft="5dp"
            android:layout_alignBaseline="@+id/y_detail_text5"
            android:layout_toRightOf="@+id/y_detail_text5"
            android:id="@+id/y_detail_text6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_levelOne"
            android:layout_marginLeft="5dp"
            android:layout_alignBaseline="@+id/y_detail_text6"
            android:layout_toRightOf="@+id/y_detail_text6"
            android:id="@+id/y_detail_text7"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/y_authentication"
            android:layout_below="@+id/y_detail_text5"
            android:layout_alignLeft="@+id/y_detail_text5"/>
        <Button
            android:layout_width="86dp"
            android:layout_height="26dp"
            android:text="@string/y_bespoke"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/y_detail_bespoke"
            android:layout_alignTop="@+id/y_detail_text1"
            android:id="@+id/y_detail_button1"/>
        <Button
            android:layout_width="86dp"
            android:layout_height="26dp"
            android:text="@string/y_consult"
            android:background="@drawable/y_detail_bespoke"
            android:layout_alignTop="@+id/y_detail_text7"
            android:layout_alignStart="@+id/y_detail_button1" />


    </RelativeLayout>
      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/y_evaluate"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/y_evaluate"
                android:drawableLeft="@drawable/y_img_praise"
                android:drawablePadding="5dp"
                android:layout_marginRight="14dp"
                android:layout_alignBaseline="@+id/y_evaluate_rate_text"
                android:layout_toLeftOf="@+id/y_evaluate_rate_text"
                android:id="@+id/y_evaluate_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
               android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/y_evaluate_rate"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:id="@+id/y_evaluate_rate_text"/>

        </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/y_evaluate"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:drawablePadding="5dp"
                    android:layout_marginStart="28dp"
                    android:drawableLeft="@drawable/y_img_respond"
                  android:layout_alignBottom="@+id/y_detail_respond_count"
                    android:id="@+id/y_detail_respond"
                    android:text="@string/y_respond"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/y_detail_respond"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    android:text="@string/y_respond_count"
                    android:id="@+id/y_detail_respond_count"/>

            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_detail_brief"
            android:textSize="17sp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="12dp"
            android:id="@+id/y_detail_brief"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/y_detail_brief"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3.2dp"
                android:text="@string/y_detail_brief_content"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/y_detail_user_evaluate"
            android:background="#CCFFFF"
            android:textSize="16sp"
            android:paddingTop="6dp"
            android:paddingStart="6dp"/>
        <ListView
            android:layout_width="match_parent"
           android:layout_height="618dp"
            android:background="#CCFFFF"
            android:id="@+id/y_detail_listV"
        >
        </ListView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CCFFFF"
            android:gravity="center">
            <Button
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:text="@string/y_more2"
                android:background="@drawable/y_button_more2"
                />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
