<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|bottom"
  android:background="#0f2e33"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/y_popups_layout"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#baefe4"
              >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_popups_pay"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:textColor="@color/red"
                android:id="@+id/y_popups_pay"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/y_popups_cancel"
                android:text="@string/y_popups_cancel"
                android:layout_alignParentEnd="true"
                android:id="@+id/y_popups_button"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#baefe4"
            android:layout_marginTop="0.5dip"
            android:id="@+id/y_r1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/y_popups_img1"
                android:id="@+id/y_popups_img1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_popups_pay_z"
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:textSize="14sp"
                android:layout_toEndOf="@id/y_popups_img1"
                android:id="@+id/y_popups_z"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/y_popups_pay_z_w"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/y_popups_z"
                android:layout_alignStart="@+id/y_popups_z"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#baefe4"
            android:layout_marginTop="0.5dip"
            android:id="@+id/y_r2">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:src="@drawable/y_popups_img2"
                android:layout_marginStart="7dp"
                android:id="@+id/y_popups_img2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_popups_pay_w"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:textSize="14sp"
                android:layout_toEndOf="@id/y_popups_img2"
                android:id="@+id/y_popups_w"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/y_popups_pay_w_w"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/y_popups_w"
                android:layout_alignStart="@+id/y_popups_w"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#baefe4"
            android:layout_marginTop="0.5dip"
            android:id="@+id/y_r3">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="7dp"
                android:src="@drawable/y_popups_img3"
                android:id="@+id/y_popups_img3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_popups_pay_bc"
                android:layout_marginStart="18dp"
                android:layout_marginTop="6dp"
                android:textSize="14sp"
                android:layout_toEndOf="@id/y_popups_img3"
                android:id="@+id/y_popups_bc"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/y_popups_pay_bc_w"
                android:layout_centerInParent="true"
                android:id="@+id/y_popups_bc_way"
                />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
