<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFFFF"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/y_conver_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:minHeight="?attr/actionBarSize" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_gravity="center_vertical|start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/y_name_of_nur1"
            android:id="@+id/y_toolbar_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/y_img_nutr_head"
        android:layout_marginTop="52dp"
        android:id="@+id/y_conver1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/y_img_conver1"
        android:layout_toEndOf="@+id/y_conver1"
        android:layout_marginStart="6dp"
        android:layout_marginTop="92dp"
        android:text="@string/y_conversation1"
        android:id="@+id/y_con_text1"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/y_user_conversation"
        android:id="@+id/y_conver2"
        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/y_con_text1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_conversation2"
        android:background="@drawable/y_img_conver2"
        android:layout_below="@+id/y_con_text1"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="6dp"
        android:layout_toStartOf="@+id/y_conver2"
        android:id="@+id/y_con_text2"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/y_img_nutr_head"
        android:id="@+id/y_conver3"
        android:layout_below="@+id/y_con_text2"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_conversation3"
        android:background="@drawable/y_img_conver1"
        android:layout_toEndOf="@+id/y_conver3"
        android:layout_below="@+id/y_con_text2"
        android:layout_marginStart="6dp"
        android:layout_marginTop="62dp"
        />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/y_img_picture"
            android:paddingStart="8dp"
            android:paddingBottom="6dp"
            android:layout_gravity="center_vertical|start"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

    </LinearLayout>

</RelativeLayout>
